current search data

--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@
                 <input type="text" id="city-input"/>
                 <button type="submit" class="submit-btn">Search</button>
                 <hr>
-                <div class="past-search">
-                    
+                <div class="past-search">   
                 </div>
+            </div>
+
+            <div class="">
+                <div class="current-forecast">
+                    <h2 id="current-search"></h2>
+                    <span id="current-date"></span>
+                    <p class="current-temp"></p>
+                    <p class="current-wind"></p>
+                    <p class="current-humidity"></p>
+                    <p class="current-uv"></p>
+                </div>   
             </div>
             
         </div>
