--- a/index.html
+++ b/index.html
@@ -31,7 +31,47 @@
                     <p class="current-wind"></p>
                     <p class="current-humidity"></p>
                     <p class="current-uv"></p>
-                </div>   
+                </div>  
+                
+                <div class="future">
+                    <h2 class="five-days">5-Day Forecast:</h2>
+                    <div class="future-days">
+                        <div class="card day1">
+                            <h3 class="card-day"></h3>
+                            <p class="card-temp"></p>
+                            <p class="card-wind"></p>
+                            <p class="card-humidity"></p>
+                        </div>
+
+                        <div class="card day2">
+                            <h3 class="card-day"></h3>
+                            <p class="card-temp"></p>
+                            <p class="card-wind"></p>
+                            <p class="card-humidity"></p>
+                        </div>
+
+                        <div class="card day3">
+                            <h3 class="card-day"></h3>
+                            <p class="card-temp"></p>
+                            <p class="card-wind"></p>
+                            <p class="card-humidity"></p>
+                        </div>
+
+                        <div class="card day4">
+                            <h3 class="card-day"></h3>
+                            <p class="card-temp"></p>
+                            <p class="card-wind"></p>
+                            <p class="card-humidity"></p>
+                        </div>
+
+                        <div class="card day5">
+                            <h3 class="card-day"></h3>
+                            <p class="card-temp"></p>
+                            <p class="card-wind"></p>
+                            <p class="card-humidity"></p>
+                        </div>
+                    </div>
+                </div>
             </div>
             
         </div>
