--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
 
-            <div class="col-9">
+            <div class="col-9 city-data">
                 <div class="current-forecast row">
                     <h2 id="current-search"></h2>
                     <span id="current-date"></span>
