--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header>
-        <h1 class="header bg-primary text-center p-2 text-white">Weather Dashboard</h1>
+        <h1 class="header btn-txt text-center p-2 text-white">Weather Dashboard</h1>
     </header>
     <main class="container mt-3 txt">
         <div class="row">
             <div class="city-search col-3">
                 <h2>Search for a City:</h2>
                 <input type="text" class="city-input form-control"/>
-                <button type="submit" class="submit-btn btn btn-primary btn-block mt-1">Search</button>
+                <button type="submit" class="submit-btn btn btn-txt btn-block mt-1">Search</button>
                 <hr>
                 <div class="past-search">   
                 </div>
